# libcapture

./: .editorconfig  CMakeLists.txt  build.sh  run.sh
src/: export.h  utils.c  utils.h
src/clipboard/: clipboard.c
src/input/: helper.h  keyboard.c  keyboard.h  listener.c  listener.h  mouse.c  mouse.h
src/linux/: export.h  utils.c  utils.h
src/linux/clipboard/: clipboard.c  clipboard.h
src/linux/input/: input.c  input.h  key.h  keyboard.c  keyboard.h  keycode.c  keycode.h  listener.c  listener.h  mouse.c  mouse.h  scancode.h
src/linux/wayland/: utils.c  utils.h
src/linux/x11/input/: keycode.c  keycode.h  listener.c  listener.h  mouse.h  scancode.h
src/service/: service.c  service.h
src/windows/: export.h  utils.c  utils.h
src/windows/clipboard/: clipboard.c  clipboard.h
src/windows/input/: helper.c  helper.h  keyboard.c  keyboard.h  listener.c  listener.h  mouse.c  mouse.h
src/windows/service/: service.c  service.h
